--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1"
   }
 }
