--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,15 @@
   "description": "Backend for eraktkosh",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "Chiranjeeb Panda",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.3"
+    "@types/node": "^20.3.3",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "express": "^4.18.2",
