--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,16 @@
   "description": "Backend for eraktkosh",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "cd dist && mocha",
+    "start": "cd dist && nodemon server.js"
   },
   "author": "Chiranjeeb Panda",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.3",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
