--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for eraktkosh",
   "main": "server.js",
   "scripts": {
-    "test": "cd dist && mocha",
+    "test": "nodemon --exec 'mocha' --watch 'dist/test/**/*.js'",
     "start": "cd dist && nodemon server.js"
   },
   "author": "Chiranjeeb Panda",
