--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "Chiranjeeb Panda",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.3",
@@ -18,6 +20,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1"
