--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/chai": "^4.3.5",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.7",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
