--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,11 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "chai": "^4.3.7",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
