--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.3",
+    "@types/cors": "^2.8.13",
+    "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "@types/cors": "^2.8.13",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "chai": "^4.3.7",
