--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,13 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.3.5",
+    "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.3",
-    "@types/cors": "^2.8.13",
-    "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   },
@@ -28,6 +29,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1"
   }
